--- a/styles.css
+++ b/styles.css
@@ -23,9 +23,31 @@ body{
     text-decoration:none;
     /* text-transform:uppercase; */
     /* letter-spacing: 5px; */
-     word-spacing: 2px;
+     /* word-spacing: 5px; */
 }
 
+
+/* Box Model */
+
+.container{
+max-width: 750px;
+margin: auto;
+}
+
+.social{
+    background: green;
+    padding-top: 15px;
+    padding-right: 20px;
+    padding-bottom: 25px;
+    padding-left: 30px;
+    margin: 5px;
+
+    border:5px solid red;
+    border-bottom-style: dotted;
+    border-top-width: 15px;
+    border-right-color: blue;
+
+ }
 
 
 
