--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@ max-width: 750px;
 margin: auto;
 }
 
-.social{
+/* .social{
     background: green;
     padding-top: 15px;
     padding-right: 20px;
@@ -47,8 +47,29 @@ margin: auto;
     border-top-width: 15px;
     border-right-color: blue;
 
- }
+ } */
 
+.box-model div {
+    float:left ;
+    background: black;
+    height: 200px;
+    width: 25%;
+    border: 10px solid rebeccapurple;
+    box-sizing: border-box;
+}
 
+a{
+    color: black;
+    text-decoration: none;
+}
 
-
+a:hover{
+    text-decoration: underline;
+}
+a:active{
+    color: blue;
+    font-style: italic;
+}
+a:visited{
+    color: brown ;
+}
