--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,31 @@ a:visited{
     border-bottom: 1px solid #ccc;
 
 }
+.contact h2 {
+text-align: center;
+}
+
+.form-group label{
+display: block;
+}
+.form-group input, 
+.form-group textarea {
+    width: 100%;
+    box-sizing: border-box;
+    border: none;
+    background: transparent;
+    border-bottom: 1px solid #ccc;
+    color: #000;
+    padding: 15px 0 10px;
+}
+.row{
+    display: flex;
+    margin-bottom: 20px;
+}
+.row> .form-group{
+    width: 50%;
+    margin-right: 20px;
+}
+.row > .form-group:last-child{
+    margin-right: 0;
+}
