--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,22 @@ body{
 }
 
 .info{
+    display: flex;
     margin-bottom: 20px;
+}
+@media(max-width:700px){
+    .info{
+        text-align: center;
+        display: block;
+    }
+}
+
+
+.info-text{
+    margin-left: 40px;
+}
+.info-text h4{
+margin-bottom: 10px;
 }
 .info p{
     color: #89898f; 
@@ -35,6 +50,7 @@ body{
 .container{
 max-width: 750px;
 margin: auto;
+padding-top: 30px;
 }
 
 /* .social{
@@ -149,3 +165,30 @@ display: block;
 .row > .form-group:last-child{
     margin-right: 0;
 }
+.btn{
+    background: #111;
+    padding: 15px 20px;
+    color: #fff;
+    border: none;
+    font-family: inherit;
+    cursor: pointer;
+}
+.btn:hover{
+    opacity: 0.9;
+}
+/* .position{
+    position: relative;
+    border:4px solid black ;
+    margin-top: 40px;
+    padding:20px ;
+    height: 300px;
+}
+.box{
+    position: fixed ;
+    top: 100px;
+    right: 20px;
+    width: 50px;
+    height: 25px;
+    background: lightcoral;
+    border-radius: 5px;
+} */
